reduces spacing between player progress bar and tduration timestamp. ensure background for progress input reflects the color of the state

--- a/public/styles.css
+++ b/public/styles.css
@@ -389,11 +389,12 @@ input[type=range]::-moz-range-thumb {
 
 .player-controls-progress {
   flex-grow: 1;
+  background-color: black;
 }
 .player-controls-duration {
   flex-grow: 0;
-  margin-right: 0;
   padding-right: 0;
+  padding-left: 0.5em;
 }
 
 .player-controls-play-pause {
